# HackITall

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/c0ffee/fastshopping/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: database.db
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/c0ffee/fastshopping/: DatabaseHelper.kt  ListAdapter.kt  ListDatabaseHelper.kt  ListView.kt  MainActivity.kt  ProductAdapter.kt  ProductDatabaseHelper.kt  ProductView.kt  ShoppingList.kt  ShoppingListActivity.kt  StoreMapActivity.kt  StoreMapView.kt
app/src/main/res/layout/: activity_main.xml  activity_shopping_list.xml  activity_store_map.xml  list_view.xml  product_view.xml
app/src/main/res/menu/: toolbar.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/c0ffee/fastshopping/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
